--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,39 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+    {% block stylesheets %}
+        <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">-->
+    {% endblock %}
+
+    {% block javascripts %}
+        {% block importmap %}{{ importmap('app') }}{% endblock %}
+    {% endblock %}
+
+</head>
+<body>
+{% block nav %}
+    <nav>
+        <ul>
+            <li><strong>MMIPLE</strong></li>
+        </ul>
+        <ul>
+            <li><a href="{{ path('app_accueil') }}">Accueil</a></li>
+            <li><a href="{{ path('app_jeux') }}">Jeux</a></li>
+            <li><a href="{{ path('app_contact') }}">Contact</a></li>
+            <li><a href="#">A Propos</a></li>
+            <li><a href="{{ path('app_panier') }}"><box-icon name='shopping-bag'></box-icon> Panier</a></li>
+        </ul>
+    </nav>
+{% endblock %}
+
+{% block main %}
+{% endblock %}
+
+{%  block footer %}
+    <footer style="position: absolute; bottom: 0;">@Designed By MMI</footer>
+{% endblock %}
+</body>
 </html>
