--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -21,6 +21,9 @@
             <tbody id="panier">
             </tbody>
         </table>
+        <div>
+            <button id="viderPanier" class="btn btn-primary">Vider le panier</button>
+        </div>
     </div>
 
 {% endblock %}
