Modification style + corrections bugs

--- a/templates/editeur/new.html.twig
+++ b/templates/editeur/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('editeur/_form.html.twig') }}
 
-    <a href="{{ path('app_editeur_index') }}">back to list</a>
+    <a class="btn btn-secondary" href="{{ path('app_editeur_index') }}">Retour</a>
 {% endblock %}
