--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,9 @@
 body {
-    background-color: #d1d2d4;
+    background-color: #fbf9fa;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
