--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,27 +13,44 @@
     {% endblock %}
 
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 {% block nav %}
-    <nav>
-        <ul>
-            <li><strong>MMIPLE</strong></li>
-        </ul>
-        <ul>
-            <li><a href="{{ path('app_accueil') }}">Accueil</a></li>
-            <li><a href="{{ path('app_jeux') }}">Jeux</a></li>
-            <li><a href="{{ path('app_contact') }}">Contact</a></li>
-            <li><a href="#">A Propos</a></li>
-            <li><a href="{{ path('app_panier') }}"><box-icon name='shopping-bag'></box-icon> Panier</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#"><strong>MMIPLE</strong></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="{{ path('app_accueil') }}">Accueil</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ path('app_jeux') }}">Jeux</a></li>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <li class="nav-item"><a class="nav-link" href="{{ path('app_editeur_index') }}">Editeur</a></li>
+                    {% endif %}
+                    <li class="nav-item"><a class="nav-link" href="{{ path('app_contact') }}">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">À Propos</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_panier') }}">
+                            <box-icon name='shopping-bag' color="#fff"></box-icon>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 {% endblock %}
 
-{% block main %}
+<div class="container my-4 flex-grow-1">
+    {% block main %}
+    {% endblock %}
+</div>
+
+{% block footer %}
+    <footer class="bg-dark text-white text-center py-3 mt-auto">
+        @Designed By MMI
+    </footer>
 {% endblock %}
 
-{%  block footer %}
-    <footer style="position: absolute; bottom: 0;">@Designed By MMI</footer>
-{% endblock %}
 </body>
 </html>
