--- a/templates/editeur/edit.html.twig
+++ b/templates/editeur/edit.html.twig
@@ -5,9 +5,8 @@
 {% block main %}
     <h1>Edit Editeur</h1>
 
-    {{ include('editeur/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('editeur/_form.html.twig', {'button_label': 'Enregistrer'}) }}
 
-    <a href="{{ path('app_editeur_index') }}">back to list</a>
-
-    {{ include('editeur/_delete_form.html.twig') }}
+    <a class="btn btn-secondary" href="{{ path('app_editeur_index') }}">Retour</a>
+    <a class="btn btn-secondary" href="#">{{ include('editeur/_delete_form.html.twig') }}</a>
 {% endblock %}
