--- a/templates/editeur/index.html.twig
+++ b/templates/editeur/index.html.twig
@@ -3,39 +3,44 @@
 {% block title %}Editeur index{% endblock %}
 
 {% block main %}
-    <h1>Editeur index</h1>
+    <div class="container mt-4">
+        <h1 class="mb-4">Editeur index</h1>
 
-    <table class="table">
-        <thead>
+        <table class="table table-bordered table-striped">
+            <thead class="thead-dark">
             <tr>
                 <th>Id</th>
                 <th>Adresse</th>
-                <th>Codepostal</th>
+                <th>Code postal</th>
                 <th>Ville</th>
-                <th>Telephone</th>
-                <th>actions</th>
+                <th>Téléphone</th>
+                <th>Actions</th>
             </tr>
-        </thead>
-        <tbody>
-        {% for editeur in editeurs %}
-            <tr>
-                <td>{{ editeur.id }}</td>
-                <td>{{ editeur.adresse }}</td>
-                <td>{{ editeur.cp }}</td>
-                <td>{{ editeur.ville }}</td>
-                <td>{{ editeur.tel|formatPhone }}</td>
-                <td>
-                    <a href="{{ path('app_editeur_show', {'id': editeur.id}) }}">show</a>
-                    <a href="{{ path('app_editeur_edit', {'id': editeur.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            {% for editeur in editeurs %}
+                <tr>
+                    <td>{{ editeur.id }}</td>
+                    <td>{{ editeur.adresse }}</td>
+                    <td>{{ editeur.cp }}</td>
+                    <td>{{ editeur.ville }}</td>
+                    <td>{{ editeur.tel|formatPhone }}</td>
+                    <td>
+                        <a href="{{ path('app_editeur_show', {'id': editeur.id}) }}" class="btn btn-info btn-sm mr-2">En savoir plus</a>
+                        <a href="{{ path('app_editeur_edit', {'id': editeur.id}) }}" class="btn btn-warning btn-sm">Modifier</a>
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="6" class="text-center">Aucun enregistrement trouvé</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
 
-    <a href="{{ path('app_editeur_new') }}">Create new</a>
+        <a class="btn btn-success" href="{{ path('app_editeur_new') }}">
+            <i class="bi bi-plus-circle"></i> Créer un nouvel éditeur
+        </a>
+    </div>
 {% endblock %}
+
