--- a/templates/jeux/index.html.twig
+++ b/templates/jeux/index.html.twig
@@ -13,33 +13,36 @@
     {%  endblock %}
 
 {% block main %}
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Code</th>
-            <th>Nom</th>
-            <th>Editeur</th>
-            <th>Prix</th>
-            <th>Image</th>
-            <th>Avis</th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for jeu in jeux %}
+    <div class="d-flex justify-content-between align-items-center mb-2">
+        <h1>Liste des Jeux</h1>
+        <a class="btn btn-primary" href="{{ path('app_jeu_new') }}">Ajouter un jeu</a>
+    </div>
+    <div class="table-responsive">
+        <table class="table table-striped table-hover text-center align-middle">
+            <thead class="table-dark">
             <tr>
-                <td><a href="{{ path('app_fiche', {'code': jeu.id }) }}">{{ jeu.id }}</a></td>
-                <td>{{ jeu.nom }}</td>
-                <td>{{ jeu.editeur != null ? jeu.editeur.nom : '-' }}</td>
-                <td>{{ jeu.prix|price('€', 2, ',', ' ') }}</td>
-                <td><img class="image-vignette" src="{{ asset('images/jeux/') }}{{ jeu.photo1 }}" alt="{{ jeu.nom }}" /></td>
-                <td>{{ jeu.avis|stars }}</td>
-                <td><button class="btn btn-primary ajoutJeu" data-id="{{ jeu.id }}" data-nom="{{ jeu.nom }}" data-prix="{{ jeu.prix }}">Ajouter au panier</button></td>
+                <th>Code</th>
+                <th>Nom</th>
+                <th>Editeur</th>
+                <th>Prix</th>
+                <th>Image</th>
+                <th>Avis</th>
+                <th>Action</th>
             </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-
-
+            </thead>
+            <tbody>
+            {% for jeu in jeux %}
+                <tr>
+                    <td><a class="text-decoration-none btn btn-primary" href="{{ path('app_fiche', {'code': jeu.id }) }}">{{ jeu.id }}</a></td>
+                    <td>{{ jeu.nom }}</td>
+                    <td>{{ jeu.editeur != null ? jeu.editeur.nom : '-' }}</td>
+                    <td class="fw-bold">{{ jeu.prix|price('€', 2, ',', ' ') }}</td>
+                    <td><img class="img-thumbnail" style="width: 80px; height: auto;" src="{{ asset('images/jeux/') }}{{ jeu.photo1 }}" alt="{{ jeu.nom }}" /></td>
+                    <td>{{ jeu.avis|stars }}</td>
+                    <td><button class="btn btn-primary ajoutJeu" data-id="{{ jeu.id }}" data-nom="{{ jeu.nom }}" data-prix="{{ jeu.prix }}">Ajouter au panier</button></td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
