--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,7 +35,34 @@
                             <box-icon name='shopping-bag' color="#fff"></box-icon>
                         </a>
                     </li>
+                    {% if app.user %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_logout') }}">
+                                <box-icon name='log-out' color="#fff"></box-icon>
+                            </a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_login') }}">
+                                <box-icon name='log-in' color="#fff"></box-icon>
+                            </a>
+                        </li>
+                    {% endif %}
                 </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_accueil', {_locale:'fr'}) }}">FR</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_accueil', {_locale:'en'}) }}">EN</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_accueil', {_locale:'de'}) }}">DE</a>
+                    </li>
+                </ul>
+                <div>
+                    <a href="{{ path('app_jeux_search') }}">Rechercher</a>
+                </div>
             </div>
         </div>
     </nav>
