--- a/templates/jeu/_form.html.twig
+++ b/templates/jeu/_form.html.twig
@@ -1,4 +1,20 @@
-{% block form %}
+{% extends 'base.html.twig' %}
+
+{% block title %}Formulaire du Jeu{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <style>
+        .needs-validation input:invalid {
+            border-color: red;
+        }
+    </style>
+{% endblock %}
+
+{% block main %}
+
+    {% form_theme form_jeu 'bootstrap_4_layout.html.twig' %}
+
     <div class="card p-4 shadow-sm">
         <h1 class="text-center">Formulaire du Jeu</h1>
         {{ form_start(form_jeu, {'attr': {'class': 'needs-validation', 'novalidate': 'novalidate'}}) }}
